<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/no_internet_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <ImageView
            android:id="@+id/no_internet_image"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:src="@drawable/no_network_512" />

        <customs.CustomTextView
            android:id="@+id/no_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/check_inter_net"
            android:textColor="@color/black"
            android:textSize="17dp"
            android:visibility="visible"
            app:typeface="bold" />

        <customs.CustomTextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/net_message" />

        <customs.CustomButton
            android:id="@+id/retry_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/draw_ripple_effect"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/retry"
            android:textColor="@color/white" />

    </LinearLayout>
</LinearLayout>