<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <customs.CustomTextView
            android:id="@+id/message_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/check_inter_net"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:typeface="bold" />

        <View style="@style/viewWidth" />

        <customs.CustomTextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/net_message"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <View style="@style/viewWidth" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal">

            <customs.CustomTextView
                android:id="@+id/cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/cancel"
                android:textAllCaps="true"
                android:textColor="@color/red"
                android:textSize="18dp"
                android:textStyle="bold"
                android:visibility="visible"
                app:typeface="bold" />

            <View style="@style/viewHeight" />

            <customs.CustomTextView
                android:id="@+id/gotoSt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/enable"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18dp"
                android:textStyle="bold"
                app:typeface="bold" />

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>