<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/permission_title"
            style="@style/textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/permissionfor_contacts"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="@dimen/sp_12"
                android:layout_height="@dimen/sp_12"
                android:layout_gravity="center"
                android:layout_margin="@dimen/sp_14"
                android:gravity="center"
                app:srcCompat="@color/colorPrimaryDark" />

            <customs.CustomTextView
                android:id="@+id/reason_of_permis1"
                style="@style/textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/reason_forpermission1" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/sp_1"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="@dimen/sp_12"
                android:layout_height="@dimen/sp_12"
                android:layout_gravity="center"
                android:layout_margin="@dimen/sp_14"
                android:gravity="center"
                app:srcCompat="@color/colorPrimaryDark" />

            <customs.CustomTextView
                android:id="@+id/reason_of_permis2"
                style="@style/textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/reason_forpermission" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/sp_1"
            android:background="@color/gray" />

        <customs.CustomTextView
            android:id="@+id/confirmation_granted"
            style="@style/textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sp_8"
            android:background="@color/colorPrimaryDark"
            android:padding="@dimen/sp_10"
            android:text="@string/ok"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>